# Localcheck

./: .gitignore  ACCEPT_IGNORE_FEATURE.md  ASYNC_ANALYSIS_IMPLEMENTATION.md  CHINESE_PRONOUN_FIX.md  Cargo.toml  DUPLICATE_CHECK_FIX.md  README.md  SCROLL_OPTIMIZATION_REPORT.md  UNIFIED_SPELLING_ERROR_TYPE.md  UTF8_BOUNDARY_FIX.md  UTF8_CRASH_FIX_REPORT.md  WORD_DOCUMENT_SUPPORT.md  WORD_SEGMENTATION_FIX.md  create_new_project.bat  index.html  package-lock.json  package.json  pnpm-lock.yaml  start.bat  test_academic_paper.docx  test_academic_paper.txt  test_accept_ignore_feature.txt  test_async_analysis.txt  test_chinese_content.txt  test_chinese_pronouns.txt  test_duplicate_check.txt  test_hyphenated.txt  test_spelling.txt  test_unified_spelling_errors.txt  test_utf8_boundary.txt  test_word_document.txt
.claude/: settings.local.json
src/: App.css  App.tsx  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dictionary.rs  document_parser.rs  fix_functions.rs  grammar_check.rs  improved_checker.rs  lib.rs  main.rs  spelling_dict.rs  title_checker.rs
