[package]
name = "localcheck"
version = "0.1.0"
description = "本地校验器"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "localcheck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "localcheck"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
rust-stemmers = "1.2.0"
language-tags = "0.3.2"
tokio = { version = "1.0", features = ["full"] }
zip = "0.6"
quick-xml = "0.31"
encoding_rs = "0.8"

